MM-50: Changed the overlaydetails background to black. Changed the font color to white

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             color:#fff;
         }
         div.spec-headline {
-            color:#333;
+            color:white;
             /*margin-top:10%;TODO decide how that will look on mobile */
         }
         div.nsNumberRed {
@@ -73,12 +73,11 @@
             color: white
         }
         div.spec-hsNumber {
-            color: #333;
-            color: #333;
+            color: white;
             font-size: 26px;
             line-height: 30px;
         }
-        div.hsNumberCont, div.hsNumberContRed { display: inline-block; border: solid 1px #333;-webkit-border-radius: 60px; -moz-border-radius: 60; border-radius: 60px; margin-right: -23px;  white-space: nowrap; vertical-align: text-bottom; position: relative;top: 22%; }
+        div.hsNumberCont, div.hsNumberContRed { display: inline-block; border: solid 1px white;-webkit-border-radius: 60px; -moz-border-radius: 60; border-radius: 60px; margin-right: -23px;  white-space: nowrap; vertical-align: text-bottom; position: relative;top: 22%; }
 
         div.hsNumberContRed {
             width: 35px; height: 35px;
@@ -97,9 +96,9 @@
         div.disclaimer {color:#fff;}
 
         div.spec-message {
-            color:#333;font-family: Arial; font-size:20px; margin-bottom:10px; margin-left: 5%; font-size: 2.25vh;
+            color:white;font-family: Arial; font-size:20px; margin-bottom:10px; margin-left: 5%; font-size: 2.25vh;
         }
-        ul.infoTexts { color: #333; font-family: Arial; padding-left: 0; margin-left:61px; font-size: 2vh;}
+        ul.infoTexts { color: white; font-family: Arial; padding-left: 0; margin-left:61px; font-size: 2vh;}
         div.hotspotCont { position: absolute; display: inline-block; background-position: center; background-repeat: no-repeat; background-size: contain; -webkit-border-radius: 60px; -moz-border-radius: 60; border-radius: 60px; }
         .hotspotContText { -webkit-border-radius: 60; -moz-border-radius: 60; border-radius: 60px; font-family: Arial; color: #ffffff;  background: #ff0000; padding: 0px;  border: solid #ffffff; text-decoration: none;  width: inherit;  height: inherit; }
         .hotspotContText:hover { background: #a10202; text-decoration: none; }
@@ -559,7 +558,7 @@
             <div class="closeButtonCont" id="videoCloseBtn" style="display: none;">
                 <button class="closeButton" onClick=""></button>
             </div>
-            <div class="overlay-details" id="overlay-details" style="width: 70%; height: 100%; right: -70%; top: 0px; position: absolute;background-color: rgba(255,255,255,0.9); ">
+            <div class="overlay-details" id="overlay-details" style="width: 70%; height: 100%; right: -70%; top: 0px; position: absolute;background-color: rgba(0, 0, 0, 0.72); ">
                 <!-- use this to show the product details after a video finished -->
                 <div style="margin-left: 20%;margin-top: 10%;margin-right:10%;">
                     <div class="row">
