--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                     </div>
                     <div class="row align-items-end">
                         <div class="col-md-auto">
-                            <img id="playHotspot" src="./assets/buttons/play_hotspot.png" class="img-responsive center-block" style="width: 30%;margin-top: 15%;">
+                            <img id="playHotspot" src="./assets/buttons/play_hotspot.png" class="img-responsive center-block" style="width: 30%;margin-top: 15%;display: none;">
                         </div>
                     </div>
                     <div class="row" style="position: absolute; bottom: 5%; width: 100%;">
