--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
                     </div>
                 </div>
                 <div class="d-flex col-xs-6 infoBlock" style="text-align: center;">
-                    <div class="col" style="height: 25vh; margin-top: 15%;margin-left: 5%;margin-right: 5%;">
+                    <div id="infoHeaderText" class="col" style="height: 25vh; margin-top: 15%;margin-left: 5%;margin-right: 5%;">
                         <div class="row">
                             <div class="col-md-2">
                                 <div class="hsNumberContRed noselect" id="hsNumberCont" style="display: none;">
