--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         }*/
 
         html { height: 100%; overflow-x: hidden; }
-        body { height: 100%; display: flex; overflow-x: hidden; overflow-y: hidden; position: relative; background-image: url("./assets/BLUE_POLLEN.png") }
+        body { height: 100%; display: flex; overflow-x: hidden; overflow-y: hidden; position: relative; background-image: url("./assets/Blue_Pollen_White_Splash.png") }
         body > div { flex: 1; }
         div.layoutCont { width:100%; height:100%; margin-left: auto; margin-right: auto; }
 
@@ -577,7 +577,7 @@
                 </div>
             </div>
         </div>
-        <img src="./assets/BLUE_POLLEN.png" class="splash-screen landscape-screen background-screen">
+        <img src="./assets/Blue_Pollen_White_Splash.png" class="splash-screen landscape-screen background-screen">
         <div id="phadiaPrime-content" class="container-fluid" style="display: none;">
             <div class="closeButtonCont" id="phadiaPrimeClose" style="display: block;">
                 <button class="closeButton" onClick="phadiaPrimeClose()"></button>
