MM-60: Added the button sonar effect

--- a/index.html
+++ b/index.html
@@ -500,6 +500,50 @@
            float: none;
            display: inline-block;
         }
+
+        .btnSonar {
+          position: relative;
+          display: inline-block;
+          cursor: pointer;
+          margin: 0 auto;
+          width: 70px;
+          height: 70px;
+          font-size: 52px;
+          transition: all 0.4s ease-in;
+        }
+        span[class^='ion'] {
+          position: relative;
+        }
+        .btnSonar:before {
+          content: '';
+          border-radius: 100%;
+          display: block;
+          position: absolute;
+          top: 0;
+          right: 0;
+          bottom: 0;
+          left: 0;
+          transform: scale(0.001, 0.001);
+        }
+        .btnSonar:focus:before{
+            animation: sonar_effect 0.8s ease-out;
+            border: solid 2.5px white;
+            animation-delay: -0.156s;
+        }
+        .btnSonar:focus {
+          outline: 0;
+          color: #fff;
+        }
+        @keyframes sonar_effect {
+            25% {
+              transform: scale(1.12, 1.12);
+              opacity: 0.5;
+            }
+            100% {
+              transform: scale(1.75, 1.75);
+              opacity: 1;
+            }
+        }
         </style>
 </head>
 
@@ -534,7 +578,7 @@
                         </div>
                     </div>
                     <div id="showMainMenuBtnVideo">
-                        <button class="mainMenuBtn" onClick="showMainMenu()"></button>
+                        <button class="mainMenuBtn btnSonar" onClick="showMainMenu()"></button>
                     </div>
                 </div>
                 <div class="d-flex col-xs-6 infoBlock" style="text-align: center;">
@@ -569,7 +613,7 @@
         </div>
         <div class="overlayFrame" id="overlay-frame" style="width:100%; height: 100%; left: 0%; top:0; position: absolute; border: 0;overflow: hidden; display: none;">
             <div class="closeButtonCont" id="videoCloseBtn" style="display: none;">
-                <button class="closeButton" onClick=""></button>
+                <button class="closeButton btnSonar" onClick=""></button>
             </div>
             <div class="overlay-details" id="overlay-details" style="width: 70%; height: 100%; right: -70%; top: 0px; position: absolute;background-color: rgba(0, 0, 0, 0.72); ">
                 <!-- use this to show the product details after a video finished -->
@@ -593,7 +637,7 @@
         <img src="./assets/Blue_Pollen_White_Splash.png" class="splash-screen landscape-screen background-screen">
         <div id="phadiaPrime-content" class="container-fluid" style="display: none;">
             <div class="closeButtonCont" id="phadiaPrimeClose" style="display: block;">
-                <button class="closeButton" onClick="phadiaPrimeClose()"></button>
+                <button class="closeButton btnSonar" onClick="phadiaPrimeClose()"></button>
             </div>
             <div class="row">
                 <div class="col" style="height: 10vh;">
@@ -644,7 +688,7 @@
         </div>
         <div id="addtionalResources-content" class="container-fluid" style="display: none;">
             <div class="closeButtonCont" style="display: block;">
-                <button class="closeButton" id="additionalResourcesCloseBtn"></button>
+                <button class="closeButton btnSonar" id="additionalResourcesCloseBtn"></button>
             </div>
             <div class="row">
                 <div class="col" style="height: 10vh;">
@@ -670,11 +714,11 @@
                 </div>
             </div>
             <div id="showMainMenuBtn">
-                <button class="mainMenuBtn" onClick="showMainMenu()"></button>
+                <button class="mainMenuBtn btnSonar" onClick="showMainMenu()"></button>
             </div>
             <div id="mainMenuCont" class="row mainMenuCont h-100 menu" style="position: absolute; bottom:-1000px; left: 12.5vw;">
                 <div class="closeButtonCont" id="mainMenuCloseBtn" style="display: none;">
-                    <button class="mainMenucloseButton" onClick="mainMenuClose()"></button>
+                    <button class="mainMenucloseButton btnSonar" onClick="mainMenuClose()"></button>
                 </div>
                 <div class="col-md-8 col-xs-8" style="padding-right: 0px; margin-right: -2%;">
                     <div class='deviceTile col-xs-5 tile' data-device-id="1" data-device-data-id="#phadia200-data" data-device-file-select="Phadia200_360_Rotation" data-device-hotspot-select="Phadia200_HotSpot" data-device-folder-id="1" data-device-title="Phadia 200 System" data-disclaimer="Not Availible in the US" data-start-x="0">
