MM-62: When a device tile is clicked we wait for the main menu to slide out before showing the layoutCont

--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
         </div>
         <div class="overlayFrame" id="overlay-frame" style="width:100%; height: 100%; left: 0%; top:0; position: absolute; border: 0;overflow: hidden; display: none;">
             <div class="closeButtonCont" id="videoCloseBtn" style="display: none;">
-                <button class="closeButton btnSonar" onClick=""></button>
+                <button class="closeButton btnSonar closeBtn" onClick=""></button>
             </div>
             <div class="overlay-details" id="overlay-details" style="width: 70%; height: 100%; right: -70%; top: 0px; position: absolute;background-color: rgba(0, 0, 0, 0.72); ">
                 <!-- use this to show the product details after a video finished -->
@@ -637,7 +637,7 @@
         <img src="./assets/Blue_Pollen_White_Splash.png" class="splash-screen landscape-screen background-screen">
         <div id="phadiaPrime-content" class="container-fluid" style="display: none;">
             <div class="closeButtonCont" id="phadiaPrimeClose" style="display: block;">
-                <button class="closeButton btnSonar" onClick="phadiaPrimeClose()"></button>
+                <button class="closeButton btnSonar closeBtn" onClick="phadiaPrimeClose()"></button>
             </div>
             <div class="row">
                 <div class="col" style="height: 10vh;">
@@ -688,7 +688,7 @@
         </div>
         <div id="addtionalResources-content" class="container-fluid" style="display: none;">
             <div class="closeButtonCont" style="display: block;">
-                <button class="closeButton btnSonar" id="additionalResourcesCloseBtn"></button>
+                <button class="closeButton btnSonar closeBtn" id="additionalResourcesCloseBtn"></button>
             </div>
             <div class="row">
                 <div class="col" style="height: 10vh;">
@@ -718,7 +718,7 @@
             </div>
             <div id="mainMenuCont" class="row mainMenuCont h-100 menu" style="position: absolute; bottom:-1000px; left: 12.5vw;">
                 <div class="closeButtonCont" id="mainMenuCloseBtn" style="display: none;">
-                    <button class="mainMenucloseButton btnSonar" onClick="mainMenuClose()"></button>
+                    <button class="mainMenucloseButton btnSonar closeBtn" onClick="mainMenuClose()"></button>
                 </div>
                 <div class="col-md-8 col-xs-8" style="padding-right: 0px; margin-right: -2%;">
                     <div class='deviceTile col-xs-5 tile' data-device-id="1" data-device-data-id="#phadia200-data" data-device-file-select="Phadia200_360_Rotation" data-device-hotspot-select="Phadia200_HotSpot" data-device-folder-id="1" data-device-title="Phadia 200 System" data-disclaimer="Not Availible in the US" data-start-x="0">
@@ -750,7 +750,6 @@
                 </div>
             </div>
         </div>
-        
     </div>
     <script id="phadia200-data" type="application/json">
       {
