MM-66: Phadia 2500 is lighter than the other tiles

--- a/index.html
+++ b/index.html
@@ -544,6 +544,11 @@
               opacity: 1;
             }
         }
+
+        div.deviceTile:nth-child(4) {
+         opacity: 0.6;
+        }
+
         </style>
 </head>
 
