MM-68, 67: Fixed the close button and menu button not being round

--- a/index.html
+++ b/index.html
@@ -362,6 +362,23 @@
                 width: 100vw;
             }
 
+            div.closeButtonCont {
+                position: fixed;
+                top:2%;
+                left:1%;
+                width:7%;
+                z-index: 99;
+            }
+            #showMainMenuBtn,
+            #showMainMenuBtnVideo {
+                 position: fixed;
+                 bottom:1%;
+                 left:1%;
+                 width:7%;
+                 z-index: 99;
+            }
+
+
         }
 
         @media only screen and (max-width: 1440px) {
