--- a/index.html
+++ b/index.html
@@ -359,10 +359,6 @@
                 bottom: 15%;
             }
 
-            #phadiaLogo {
-                margin-top: 10%;
-            }
-
             div.tileContainer {
                 margin-left: 7% !important;
                 width: 100vw;
@@ -407,6 +403,25 @@
              margin-bottom: -24%;
              height: 15%
             }
+            div.spec-headline { 
+                font-family: Arial; 
+                font-size:2.6vh;
+                display: inline-block; 
+                padding-left: 40px; 
+                padding-right: 40px; 
+            }
+            div.spec-message {
+                color:white;
+                font-family: Arial; 
+                font-size:20px; 
+                margin-bottom:10px; 
+                margin-left: 10%; 
+                font-size: 2.1vh;
+            }
+            .systems-logo {
+                width: 100vh;
+            }
+
         }
 
         @media only screen and (max-width: 1440px) {
