--- a/index.html
+++ b/index.html
@@ -345,7 +345,10 @@
          height: 15%;
         }
         /*Ipads*/
-        @media only screen and (width: 1024px) and (height: 768px) {
+        @media only screen 
+        and (min-device-width : 768px) 
+        and (max-device-width : 1024px) 
+        and (orientation : landscape) {
             #playAllBut {bottom: 10%; right: 20%;}
             div.deviceTile {
                 height: 26vh;
