Added the Stacked Thermo Scientific logo to the splash screen. Made the play hotspot button smaller and moved it up

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         .scientific-logo {
             position: relative;
             margin: auto;
-            width: 75%;
+            width: 50%;
             display: block;
             top: 50%;
         }
@@ -541,6 +541,11 @@
         #disclaimer{
             color: white
         }
+        #playHotspot {
+         width: 23%;
+         margin-top: 5%;
+        }
+
 
         #playHotspot:hover{
             cursor: pointer;
@@ -702,7 +707,7 @@
                     </div>
                     <div class="row align-items-end">
                         <div class="col-md-auto">
-                            <img id="playHotspot" src="./assets/buttons/play_hotspot.png" class="img-responsive center-block" style="width: 30%;margin-top: 15%;display: none;">
+                            <img id="playHotspot" src="./assets/buttons/play_hotspot.png" class="img-responsive center-block" style="display: none;">
                         </div>
                     </div>
                     <div class="row" style="position: absolute; bottom: 5%; width: 100%;">
@@ -820,7 +825,7 @@
                     <img src="./assets/Phadia_Systems_Logo.svg" class="systems-logo img-responsive center-block" />
                 </div>
                 <div id="thermoLogo" class="row">
-                    <img src="./assets/Thermo-Scientific-Single-Line_Cropped.svg" class="scientific-logo" />
+                    <img src="./assets/Thermo-Scientific-Stacked_Cropped.svg" class="scientific-logo" />
                 </div>
             </div>
             <div id="showMainMenuBtn">
